--- a/built_value_example/pubspec.yaml
+++ b/built_value_example/pubspec.yaml
@@ -1,16 +1,19 @@
 name: built_value_example
 description: A new Flutter project.
 
+environment:
+  sdk: ">=2.1.0 <3.0.0"
+
 dependencies:
   flutter:
     sdk: flutter
 
-  built_value: ^1.0.1
-  built_collection: ^1.0.0
+  built_value: ^7.1.0
+  built_collection: ^4.3.2
 
 dev_dependencies:
-  build_runner: ^0.3.0
-  built_value_generator: ^1.0.1
+  build_runner: ^1.10.0
+  built_value_generator: ^7.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
